Fix linter errors and warnings: Add @NonNull annotations, custom exceptions, constants, and modernize code